# transiq-navigator

./: .env  .gitignore  AGENT_RUN_EXAMPLES.md  ANSWER_FAKE_DATA_NO_AUTH.md  ARCHITECTURE.md  CELERY_MULTI_TENANT.md  CHUNKING_PIPELINE_API_EXAMPLES.md  CHUNKING_PIPELINE_IMPLEMENTATION.md  CHUNKING_PIPELINE_INTEGRATION.md  CLIENT_OVERVIEW_DOCUMENT.md  DEMO_GUIDE.md  DEMO_SUCCESS.md  Dockerfile  FRONTEND_ARCHITECTURE_ANALYSIS.md  FRONTEND_ARCHITECTURE_DIAGRAMS.md  FRONTEND_QUICK_REFERENCE.md  GRAPHRAG_COMPLETION_SUMMARY.md  GRAPHRAG_QDRANT_ANALYSIS.md  GRAPHRAG_USER_GUIDE.md  IMPACT_ENGINE_QUICK_REFERENCE.md  LOVABLE_UI_UX_SPEC.md  MIGRATION.md  MULTI_TENANT_IMPLEMENTATION_SUMMARY.md  Makefile  PHASE2_COMPLETE.md  PHASE2_TO_5_COMPLETE_ROADMAP.md  PHASE5_FRONTEND_IMPLEMENTATION_GUIDE.md  PROMPT_VERSIONING.md  QUICK_SUMMARY.md  README.md  SECURITY_AND_AUTHENTICATION.md  SECURITY_COMPLETE.md  SYSTEM_INTEGRATION_REPORT.md  TRANSIQ_PROJECT_INFORMATION_DOCUMENT.md  TransIQ-backend-master.code-workspace  V2_IMPLEMENTATION_SUMMARY.md  _check_chunks.py  _check_chunks2.py  _test_llm_health.py  check_dashboard.py  (+42 more)
.lovable/: plan.md
Frontend/: 00_START_HERE.md  BACKEND_FRONTEND_CONNECTION.md  CHECK_SETUP.bat  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_SECURITY_INTEGRATION.md  FRONTEND_V2_QUICK_SUMMARY.md  FRONTEND_V2_UPGRADE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL_AND_RUN.bat  LAUNCH_SUMMARY.txt  PHASE5_FRONTEND_INTEGRATION.md  PHASE5_FRONTEND_QUICK_REFERENCE.md  QUICK_REFERENCE.md  QUICK_START.bat  README_SETUP.txt  RUN_INSTRUCTIONS.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  (+5 more)
(+692 files in other folders)
